--- a/stylem.css
+++ b/stylem.css
@@ -235,3 +235,20 @@ input:focus {
   border-radius: 4px;
   cursor: pointer;
 }
+
+.brid-branding {
+  -webkit-animation: fadeOut 2s forwards;
+   animation: fadeOut 2s forwards;
+   -webkit-animation-delay: 4s;
+   animation-delay: 4s;
+  }
+
+  @-webkit-keyframes fadeOut {
+      from {opacity: 1;}
+      to {opacity: 0;}
+  }
+
+  @keyframes fadeOut {
+      from {opacity: 1;}
+      to {opacity: 0;}
+  }
